--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,9 @@
 {
+    "sonarlint.connectedMode.project": {
+        "connectionId": "http-localhost-9000-",
+        "projectKey": "testJS"
+    },
+    "cSpell.words": [
+        "Subheadingcard"
+    ]
 }
