--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-github-btn": "^1.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-intl": "^6.1.1",
+    "react-messenger-customer-chat": "^0.8.0",
     "react-modal": "^3.13.1",
     "react-number-format": "^5.1.2",
     "react-rnd": "^10.2.4",
